# NovelForge

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
apps/desktop/: index.html  package.json  tsconfig.app.json  vite.config.ts
apps/desktop/src/: main.tsx  router.test.tsx  router.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/migrations/: 0001_initial.sql  0002_scene_beat_outline.sql  0003_project_story_brief.sql
apps/desktop/src-tauri/src/: ai.rs  app_settings.rs  commands.rs  db.rs  lib.rs  main.rs  models.rs  startup_state.rs  state.rs
apps/desktop/src/components/: ui.tsx
apps/desktop/src/features/chapters/: ChapterDetailView.test.tsx  ChapterDetailView.tsx  ChaptersView.tsx
apps/desktop/src/features/characters/: CharactersView.tsx
apps/desktop/src/features/project/: AppShell.tsx  CreateProjectSurface.tsx  ProjectGate.tsx  SceneWorkspaceLeavePrompt.tsx  WorkbenchActivityBar.tsx  WorkbenchAiPanel.tsx  WorkbenchExplorerPanel.tsx  workbench.ts
apps/desktop/src/hooks/: useAiRuntime.ts  useAppSettings.ts  useProjectRuntime.ts  useProjectSnapshot.ts  useRecommendedModels.ts
apps/desktop/src/lib/: ids.ts  routes.test.ts  routes.ts  tauri.ts  utils.ts
apps/desktop/src/store/: uiStore.ts
apps/desktop/src/workers/: analysis.worker.ts
docs/: architecture.md
(+12 files in other folders)
