[package]
name = "novelforge-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "novelforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.40", features = ["serde"] }
keyring = "3.6.2"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.34.0", features = ["bundled", "chrono"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tauri = { version = "2.3.1", features = [] }
tauri-plugin-dialog = "2.2.1"
thiserror = "2.0.12"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
